# vladk-neural-network

./: .gitignore  README.md  experiments  output.txt  pyproject.toml  pytest.ini  test  test_lapt
notebooks/: CNN.ipynb  binary_classification.ipynb  multi_classification.ipynb  regression.ipynb
src/: _main.py  main.py
src/experiment/: classification.py  regression.py
src/model/: activation.py  base.py  layer.py  layers.py  loss.py  metric.py  opimizer.py  optimizer.py
tests/: test_base.py  test_binary_classification.py  test_cnn_classification.py  test_multi_classification.py  test_regression.py
